<resources>
    <string name="app_name">  </string>
    <string name="media_player">MEDIA PLAYER</string>
    <string name="sign_up">       SIGN UP           </string>
    <string name="sign_in">       SIGN IN           </string>
    <string name="register">      Register          </string>
    <string name="for_a_better_virtual_experience">For a better virtual experience</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search">Search</string>
    <string name="profile">PROFILE</string>
    <string name="upload_new_videos">UPLOAD NEW VIDEOS</string>
    <string name="profile_details">PROFILE DETAILS</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="phone">PHONE :</string>
    <string name="okay">Okay</string>
    <string name="ok">ok</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="createnewvideo">CreateNewVideo</string>
    <string name="savecontentvideo">SaveContentVideo</string>
    <string name="date_time">Date Time</string>


</resources>