<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".registration.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/media_registration_page"
        android:background="@drawable/registration_background"
        android:elevation="30dp"
        android:focusable="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/nosifer"
        android:text="@string/media_player"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_a_better_virtual_experience"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/registration_background"
        >

        <Button
            android:id="@+id/registration_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/registration_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>