<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_profile_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:background="@drawable/dialog_button_background"
    android:elevation="3dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/dialog_button_background"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/profile_details"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:layout_marginTop="0dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_details_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/media_splash1"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_register_name" />


        <TextView
            android:id="@+id/profile_details_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHighlight="#090909"
            android:textColorHint="@color/black"
            android:textColorLink="#090909"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_register_email" />

        <TextView
            android:id="@+id/profile_details_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHighlight="#090909"
            android:textColorHint="@color/black"
            android:textColorLink="#0B0B0B"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_register_phone" />

        <TextView
            android:id="@+id/profile_details_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHighlight="#050505"
            android:textColorHint="@color/black"
            android:textColorLink="#040404"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">



        <Button
            android:id="@+id/profile_details_OkayBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FAF7F7"
            android:text="@string/ok"
            android:textColor="#0B0B0B"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>