<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_background"
    android:elevation="10dp"
    android:orientation="vertical"
    tools:context=".registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/media_loginback"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_login_page"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:src="@drawable/media_login"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="7dp"
            android:text="@string/login"
            android:textAlignment="textStart"
            android:textColor="#FD0202"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/registration_background"
        android:elevation="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/registration_background"
            android:elevation="12dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:src="@drawable/ic_register_email" />

            <EditText
                android:id="@+id/email_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#0E0E0E"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#0E0E0E"
                android:textColorHighlight="#0E0E0E"
                android:textColorHint="#0C0C0C"
                android:textColorLink="#121212"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/registration_background"
            android:elevation="30dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:src="@drawable/ic_register_password" />

            <EditText
                android:id="@+id/password_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#070707"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="#121111"
                android:textColorHint="#0B0A0A"
                android:textColorLink="#070707"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="0dp" >

            <TextView
                android:id="@+id/forgotPassword_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="right"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="0dp"
            android:elevation="8dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/loginButton_login_page"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>